Catalog footer complete

--- a/src/app/lang/messages/es.json
+++ b/src/app/lang/messages/es.json
@@ -25,5 +25,11 @@
   },
   "misc": {
     "cancelBtn": "Cancelar"
+  },
+  "footer": {
+    "copyright": "Todos los derechos reservados",
+    "faq": "Preguntas frecuentes",
+    "delivery": "Envíos",
+    "privacy": "Política de Privacidad"
   }
 }
