top products component ready

--- a/src/app/lang/messages/es.json
+++ b/src/app/lang/messages/es.json
@@ -36,5 +36,9 @@
     "payment": "Varios métodos de pago para tu comodidad",
     "quality": "Acero inoxidable hipoalergénico de gran calidad",
     "delivery": "Envíos a toda Venezuela"
+  },
+  "productCarousel": {
+    "home": "Productos destacados",
+    "product": "Productos relacionados"
   }
 }
