Parcial completion of shopping cart section

--- a/src/app/lang/es/translations/paydata.json
+++ b/src/app/lang/es/translations/paydata.json
@@ -1,12 +1,13 @@
 {
   "id": "Cédula de identidad",
-  "name": "Nombre",
-  "phone": "Teléfono",
+  "clientName": "Nombre",
+  "clientPhone": "Teléfono",
   "phoneNumber": "Teléfono",
   "bank": "Banco",
   "accountNumber": "Número de cuenta",
   "accountType": "Tipo de cuenta",
-  "email": "Correo electrónico",
+  "clientEmail": "Correo electrónico",
+  "email": "ID de pago",
   "reference": "Referencia de pago",
   "modalTitle": "Instrucciones de pago",
   "actionBtn": "Notificar pago",
