Vercel CPU consumption adjustments

--- a/src/app/lang/es/translations/home.json
+++ b/src/app/lang/es/translations/home.json
@@ -2,6 +2,6 @@
   "title": "Inicio",
   "payment": "Varios métodos de pago para tu comodidad",
   "quality": "Acero inoxidable hipoalergénico de gran calidad",
-  "delivery": "Envíos a toda Venezuela"
-
+  "delivery": "Envíos a toda Venezuela",
+  "combos": "Combos"
 }
